# clusterXrayFluctuation

./: .gitattributes  .gitignore  .gitlab-ci.yml  404.html  README.md  index.html  macs.ipynb  main.html  mkdocs.yml  objects.inv  pyproject.toml  sz_mean_model.ipynb
.github/workflows/: doc.yml
MACSJ0717.5+3745/: macs_j0717_nh.fits  srclist_MACSJ0717.5+3745.reg  srclist_MACSJ0717.5+3745_ib.reg  srclist_MACSJ0717.5+3745_test.reg  voronoi.txt
docs/examples/: compute_nh.ipynb  open_data.ipynb  power_spectrum.ipynb  voronoi.ipynb
docs/references/: fitting.md  simulation.md
examples/compute_nh/: index.html
examples/data/: NHI_HPX.fits
examples/data/A2142/: A2142_PIXEL_INDEX_2048_MILCA.fits  A2142_VAR_map_MILCA_070_to_857_GHz_7arcmin.fits  A2142_Y-PROF-COVMAT_P-PROF-COVMAT.20170830.fits  A2142_abund.fits  A2142_density_L1.fits  A2142_entropy.fits  A2142_hydro_mass.fits  A2142_temperature.fits  src_ps.reg  voronoi.txt
examples/mean_model/: index.html  mean_model.ipynb
examples/mock_fluctuations/: index.html
examples/open_data/: index.html
examples/power_spectrum/: index.html
examples/sbi_with_spectra/: index.html  sbi_with_spectra.ipynb
examples/voronoi/: index.html
references/data/: data.md  index.html
references/fitting/: index.html
references/physics/: index.html  physics.md
references/simulation/: index.html
search/: search_index.json
src/xsb_fluc/data/: cluster.py  mean_model.py  radial_profile.py  sample.py
src/xsb_fluc/fitting/: mean_model.py
src/xsb_fluc/morpho/: indicators.py
src/xsb_fluc/physics/: cooling.py  countrate.py  (+7 more)
(+22 files in other folders)
